--- a/Pengertian.html
+++ b/Pengertian.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pengertian Smart City</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="pengertianstyle.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,7 +21,7 @@
       </div>
       <div class="navbar-tengah">
         <a href="pengertian.html">Pengertian</a>
-        <a href="solusitranportasi.html">Transprotasi</a>
+        <a href="Transprortasi.html">Transprotasi</a>
         <a href="#">Pariwisata</a>
         <a href="#">Kesehatan</a>
         <i data-feather="moon"></i>
