--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="Transprortasi.html">Transprotasi</a>
         <a href="#">Pariwisata</a>
         <a href="#">Kesehatan</a>
-        <i data-feather="moon"></i>
+        <i data-feather="moon" id="modegelap" onclick="klikmodegelap()"></i>
         <i data-feather="sun"></i>
       </div>
       <i data-feather="menu" id="menu"></i>
@@ -380,5 +380,6 @@
     <script>
       feather.replace();
     </script>
+    <script src="index.js"></script>
   </body>
 </html>
