--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/feather-icons"></script>
   </head>
   <body>
@@ -21,10 +22,8 @@
         <p>Smart<span>City</span></p>
       </div>
       <div class="navbar-tengah">
-        <a href="pengertian.html">Pengertian</a>
+        <a href="index.html">Pengertian</a>
         <a href="Transprortasi.html">Transprotasi</a>
-        <a href="#">Pariwisata</a>
-        <a href="#">Kesehatan</a>
         <i data-feather="moon" id="modegelap" onclick="klikmodegelap()"></i>
         <i data-feather="sun"></i>
       </div>
