--- a/Pengertian MRT.html
+++ b/Pengertian MRT.html
@@ -1,129 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Apa itu MRT</title>
     <link rel="stylesheet" href="transprotasistyle.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet" />
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://unpkg.com/feather-icons"></script>
-</head>
+    <script
+      src="https://kit.fontawesome.com/1897315b86.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<body>
+  <body>
     <!-- Navbar -->
     <nav class="navbar">
-        <div class="navbar-logo">
-            <p>Smart<span>City</span></p>
-        </div>
-        <div class="navbar-tengah">
-            <a href="index.html">Pengertian</a>
-            <a href="Transprortasi.html">Transprotasi</a>
-            <i data-feather="moon"></i>
-            <i data-feather="sun"></i>
-        </div>
-        <i data-feather="menu" id="menu"></i>
+      <div class="navbar-logo">
+        <p>Smart<span>City</span></p>
+      </div>
+      <div class="navbar-tengah">
+        <a href="index.html">Pengertian</a>
+        <a href="Transprortasi.html">Transprotasi</a>
+        <i data-feather="moon"></i>
+        <i data-feather="sun"></i>
+      </div>
+      <i data-feather="menu" id="menu"></i>
     </nav>
     <!-- Isi -->
     <div class="isi">
-        <p class="judul">Apa itu MRT?</p>
-        <div class="awal">
-            <div>
-                <img src="/image/MRTset3.jpg" alt="" />
-                <p class="penjelasan">
-                    Kepanjangan dari MRT adalah <span><i>Mass Rapid Transit</i></span>, dan <span>pengertian nya adalah
-                        adalah</span>
-                    sistem
-                    transportasi rel angkutan cepat di Jakarta. Proses pembangunan moda transportasi ini dimulai tahun
-                    2013. Jalur pertama layanan MRT Jakarta dioperasikan tanggal 24 Maret 2019, menjadikannya layanan
-                    moda raya terpadu pertama yang beroperasi di Indonesia.
-                    Layanan MRT Jakarta <span>dioperasikan oleh PT MRT Jakarta (Perseroda)</span>, badan usaha milik
-                    daerah DKI
-                    Jakarta. Jalur yang telah beroperasi saat ini merupakan jalur sepanjang 15,7 km yang menghubungkan
-                    Stasiun Lebak Bulus dengan Stasiun Bundaran HI
-                </p>
-            </div>
+      <p class="judul">Apa itu MRT?</p>
+      <div class="awal">
+        <div>
+          <img src="/image/MRTset3.jpg" alt="" />
+          <p class="penjelasan">
+            Kepanjangan dari MRT adalah <span><i>Mass Rapid Transit</i></span
+            >, dan <span>pengertian nya adalah adalah</span> sistem transportasi
+            rel angkutan cepat di Jakarta. Proses pembangunan moda transportasi
+            ini dimulai tahun 2013. Jalur pertama layanan MRT Jakarta
+            dioperasikan tanggal 24 Maret 2019, menjadikannya layanan moda raya
+            terpadu pertama yang beroperasi di Indonesia. Layanan MRT Jakarta
+            <span>dioperasikan oleh PT MRT Jakarta (Perseroda)</span>, badan
+            usaha milik daerah DKI Jakarta. Jalur yang telah beroperasi saat ini
+            merupakan jalur sepanjang 15,7 km yang menghubungkan Stasiun Lebak
+            Bulus dengan Stasiun Bundaran HI
+          </p>
         </div>
-        <div class="kedua">
-            <p class="judul">Apa manfaat MRT?</p>
-            <div class="kotak">
-                <div>
-                    <i data-feather="command"></i>
-                    <p>MRT Memberikan Kemudahan</p>
-                </div>
-                <div>
-                    <i data-feather="lock"></i>
-                    <p>Mengurangi Polusi</p>
-                </div>
-                <div>
-                    <i data-feather="trash"></i>
-                    <p>MRT Berlaju cukup cepat</p>
-                </div>
-                <div>
-                    <i data-feather="wind"></i>
-                    <p>Membuat Kawasan Menjadi Lebih Berkembang
-                    </p>
-                </div>
-                <div>
-                    <i data-feather="user"></i>
-                    <p>Investasi Untuk Masa Depan Indonesia</p>
-                </div>
-                <div>
-                    <i data-feather="droplet"></i>
-                    <p>Menciptakan Banyak Lapangan Kerja</p>
-                </div>
-
-            </div>
+      </div>
+      <div class="kedua">
+        <p class="judul">Apa manfaat MRT?</p>
+        <div class="kotak">
+          <div>
+            <i data-feather="command"></i>
+            <p>MRT Memberikan Kemudahan</p>
+          </div>
+          <div>
+            <i data-feather="lock"></i>
+            <p>Mengurangi Polusi</p>
+          </div>
+          <div>
+            <i data-feather="trash"></i>
+            <p>MRT Berlaju cukup cepat</p>
+          </div>
+          <div>
+            <i data-feather="wind"></i>
+            <p>Membuat Kawasan Menjadi Lebih Berkembang</p>
+          </div>
+          <div>
+            <i data-feather="user"></i>
+            <p>Investasi Untuk Masa Depan Indonesia</p>
+          </div>
+          <div>
+            <i data-feather="droplet"></i>
+            <p>Menciptakan Banyak Lapangan Kerja</p>
+          </div>
         </div>
-        <p class="judul">
-            Sejarah MRT
-        </p>
-        <div class="ketiga">
-            <div>
-                <h1>1. Awal Perancanaan MRT</h1>
-                <p>
-                    Pembangunan MRT Jakarta pertama kali dicetuskan pada 1985 oleh B. J. Habibie sebagai solusi atas
-                    tingginya mobilitas penduduk antara Jakarta dan wilayah Bodetabek yang menyebabkan kemacetan. Pada
-                    1996, proyek MRT dengan rute Blok M–Jakarta Kota sepanjang 14 km direncanakan, namun gagal akibat
-                    krisis ekonomi 1997–1998. Setelah kondisi membaik, proyek ini kembali dibahas melalui kajian Rencana
-                    Induk Transportasi Terpadu untuk Jabodetabek (SITRAMP) oleh JICA. Pada 2005, Presiden Susilo Bambang
-                    Yudhoyono menetapkan MRT Jakarta sebagai proyek nasional, dengan dukungan pinjaman dari Jepang,
-                    memulai persiapan pembangunan jalur pertama.
-                </p>
+      </div>
+      <p class="judul">Sejarah MRT</p>
+      <div class="ketiga">
+        <div>
+          <h1>1. Awal Perancanaan MRT</h1>
+          <p>
+            Pembangunan MRT Jakarta pertama kali dicetuskan pada 1985 oleh B. J.
+            Habibie sebagai solusi atas tingginya mobilitas penduduk antara
+            Jakarta dan wilayah Bodetabek yang menyebabkan kemacetan. Pada 1996,
+            proyek MRT dengan rute Blok M–Jakarta Kota sepanjang 14 km
+            direncanakan, namun gagal akibat krisis ekonomi 1997–1998. Setelah
+            kondisi membaik, proyek ini kembali dibahas melalui kajian Rencana
+            Induk Transportasi Terpadu untuk Jabodetabek (SITRAMP) oleh JICA.
+            Pada 2005, Presiden Susilo Bambang Yudhoyono menetapkan MRT Jakarta
+            sebagai proyek nasional, dengan dukungan pinjaman dari Jepang,
+            memulai persiapan pembangunan jalur pertama.
+          </p>
 
-                <h1>2. Pengembangan pertama</h1>
-                <p>
-                    Proses pengembangan jalur pertama MRT Jakarta dimulai ketika Presiden SBY menetapkan sistem ini
-                    sebagai proyek nasional, diikuti dengan penandatanganan perjanjian pinjaman pertama dengan JICA pada
-                    2006. PT MRT Jakarta didirikan pada 2008 untuk mendukung pembangunan dan operasionalnya. Desain
-                    dasar jalur pertama dikerjakan dari 2010 hingga 2012, dengan persiapan proyek Lin Utara–Selatan
-                    dimulai pada April 2012 oleh Gubernur Fauzi Bowo. Konstruksi dimulai pada 2013 dengan peletakan batu
-                    pertama oleh Gubernur Joko Widodo, dan seluruh jalur tersambung pada Oktober 2017. Setelah uji coba
-                    publik terbatas pada Maret 2019, jalur pertama MRT Jakarta diresmikan oleh Presiden Joko Widodo pada
-                    24 Maret 2019.
-                </p>
+          <h1>2. Pengembangan pertama</h1>
+          <p>
+            Proses pengembangan jalur pertama MRT Jakarta dimulai ketika
+            Presiden SBY menetapkan sistem ini sebagai proyek nasional, diikuti
+            dengan penandatanganan perjanjian pinjaman pertama dengan JICA pada
+            2006. PT MRT Jakarta didirikan pada 2008 untuk mendukung pembangunan
+            dan operasionalnya. Desain dasar jalur pertama dikerjakan dari 2010
+            hingga 2012, dengan persiapan proyek Lin Utara–Selatan dimulai pada
+            April 2012 oleh Gubernur Fauzi Bowo. Konstruksi dimulai pada 2013
+            dengan peletakan batu pertama oleh Gubernur Joko Widodo, dan seluruh
+            jalur tersambung pada Oktober 2017. Setelah uji coba publik terbatas
+            pada Maret 2019, jalur pertama MRT Jakarta diresmikan oleh Presiden
+            Joko Widodo pada 24 Maret 2019.
+          </p>
 
-                <h1>3. Pengembangan Lanjutan</h1>
-                <p>
-                    Bersamaan dengan peresmian fase pertama Lin Utara–Selatan MRT Jakarta, Presiden Joko Widodo juga
-                    mencanangkan pembangunan fase kedua. Namun, konstruksi fase IIA diperkirakan terlambat akibat dampak
-                    Pandemi Covid-19 terhadap anggaran dan proses pelelangan kontrak, dengan target penyelesaian segmen
-                    pertama yang mundur dari 2024 ke 2025. Pembangunan fase ini, yang dirancang dengan konsep kawasan
-                    berorientasi transit untuk memudahkan perpindahan moda transportasi, masih berlangsung. Sementara
-                    itu, fase IIB masih dalam tahap studi kelayakan.
-                </p>
-
-            </div>
+          <h1>3. Pengembangan Lanjutan</h1>
+          <p>
+            Bersamaan dengan peresmian fase pertama Lin Utara–Selatan MRT
+            Jakarta, Presiden Joko Widodo juga mencanangkan pembangunan fase
+            kedua. Namun, konstruksi fase IIA diperkirakan terlambat akibat
+            dampak Pandemi Covid-19 terhadap anggaran dan proses pelelangan
+            kontrak, dengan target penyelesaian segmen pertama yang mundur dari
+            2024 ke 2025. Pembangunan fase ini, yang dirancang dengan konsep
+            kawasan berorientasi transit untuk memudahkan perpindahan moda
+            transportasi, masih berlangsung. Sementara itu, fase IIB masih dalam
+            tahap studi kelayakan.
+          </p>
         </div>
+      </div>
     </div>
 
     <script>
-        feather.replace();
+      feather.replace();
     </script>
-</body>
-
+  </body>
 </html>
