--- a/Transprortasi.html
+++ b/Transprortasi.html
@@ -1,174 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pengertian Smart City</title>
+    <link rel="stylesheet" href="transprotasistyle.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://unpkg.com/feather-icons"></script>
+    <script
+      src="https://kit.fontawesome.com/1897315b86.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pengertian Smart City</title>
-  <link rel="stylesheet" href="transprotasistyle.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet" />
-  <script src="https://unpkg.com/feather-icons"></script>
-</head>
-
-<body>
-  <!-- Navbar -->
-  <nav class="navbar">
-    <div class="navbar-logo">
-      <p>Smart<span>City</span></p>
-    </div>
-    <div class="navbar-tengah">
-      <a href="index.html">Pengertian</a>
-      <a href="Transprortasi.html">Transprotasi</a>
-      <i data-feather="moon"></i>
-      <i data-feather="sun"></i>
-    </div>
-    <i data-feather="menu" id="menu"></i>
-  </nav>
-  <!-- Isi -->
-  <div class="isi">
-    <p class="judul">Solusi Transportasi pada <span>Smart City</span></p>
-    <div class="awal">
-      <div>
-        <img src="/image/bus-listrik-tmp-bandung_169.jpeg" alt="" />
-        <p>
-          Untuk membangun smart city yang maju dan modern diperlukan 3 solusi
-          utama yang inovatif, Seperti solusi untuk Transportasi, Solusi untuk
-          bidang Pariwisata dan solusi untuk bidang kesehatan yang
-          menggabungkan antara peran teknologi dan juga peran manusia. Khusus
-          untuk halaman ini kita membahas tentang solusi pada Transportasi.
-          Sebelum itu apakah kalian tau pengertian dari Transportasi?, ya
-          Transportasi adalah perpindahan orang atau barang dari satu tempat
-          ke tempat lain dengan menggunakan kendaraan yang digerakkan oleh
-          manusia, hewan, atau mesin.
-          <span>Biasanya pada kota smart city lebih cenderung menggunakan
-            transportasi umum.</span>, Apa saja sih fungsi transportasi umum? yuk simak.
-        </p>
+  <body>
+    <!-- Navbar -->
+    <nav class="navbar">
+      <div class="navbar-logo">
+        <p>Smart<span>City</span></p>
       </div>
-    </div>
-    <div class="kedua">
-      <p class="judul">Apa Fungsi Transportasi Umum?</p>
-      <div class="kotak">
+      <div class="navbar-tengah">
+        <a href="index.html">Pengertian</a>
+        <a href="Transprortasi.html">Transprotasi</a>
+        <i data-feather="moon"></i>
+        <i data-feather="sun"></i>
+      </div>
+      <i data-feather="menu" id="menu"></i>
+    </nav>
+    <!-- Isi -->
+    <div class="isi">
+      <p class="judul">Solusi Transportasi pada <span>Smart City</span></p>
+      <div class="awal">
         <div>
-          <i data-feather="command"></i>
-          <p>Menghemat uang</p>
-        </div>
-        <div>
-          <i data-feather="lock"></i>
-          <p>Ramah untuk lingkungan</p>
-        </div>
-        <div>
-          <i data-feather="trash"></i>
-          <p>Dapat bersosialisasi dengan orang lain</p>
-        </div>
-        <div>
-          <i data-feather="wind"></i>
-          <p>Keamanan dan kenyamanan yang lebih baik</p>
-        </div>
-        <div>
-          <i data-feather="user"></i>
-          <p>Dapat menghindari kemacatan</p>
-        </div>
-        <div>
-          <i data-feather="droplet"></i>
-          <p>Hemat Tenaga</p>
-        </div>
-        <div>
-          <i data-feather="database"></i>
-          <p>Meningkatkan aktivitas tubuh</p>
-        </div>
-        <div>
-          <i data-feather="truck"></i>
-          <p>Tidak repot mencari parkir</p>
-        </div>
-        <div>
-          <i data-feather="cloud"></i>
-          <p>Lebih leluasa menikmati pemandangan</p>
-        </div>
-        <div>
-          <i data-feather="user"></i>
-          <p>Fleksibilitas yang baik</p>
+          <img src="/image/bus-listrik-tmp-bandung_169.jpeg" alt="" />
+          <p>
+            Untuk membangun smart city yang maju dan modern diperlukan 3 solusi
+            utama yang inovatif, Seperti solusi untuk Transportasi, Solusi untuk
+            bidang Pariwisata dan solusi untuk bidang kesehatan yang
+            menggabungkan antara peran teknologi dan juga peran manusia. Khusus
+            untuk halaman ini kita membahas tentang solusi pada Transportasi.
+            Sebelum itu apakah kalian tau pengertian dari Transportasi?, ya
+            Transportasi adalah perpindahan orang atau barang dari satu tempat
+            ke tempat lain dengan menggunakan kendaraan yang digerakkan oleh
+            manusia, hewan, atau mesin.
+            <span
+              >Biasanya pada kota smart city lebih cenderung menggunakan
+              transportasi umum.</span
+            >, Apa saja sih fungsi transportasi umum? yuk simak.
+          </p>
         </div>
       </div>
-    </div>
-    <div class="kedua">
-      <p class="judul">Apa saja contoh transportasi umum yang canggih?</p>
-      <p class="penghantar">Hadirnya layanan transportasi umum yang efisien dan merata menjadi kunci utama dari
-        pergerakan orang-orang di perkotaan yang serba cepat. Transportasi umum juga dapat membuat pusat kota tetap
-        ramai dan mampu mengurangi kemacetan, <span>kalian bisa klik kotak yang di bawah ini untuk penjelasan yang lebih
-          detail pada transportasi tersebut</span>. Berikut ini adalah contoh contohnya :</p>
-      <div class="kotak">
-        <a href="Pengertian MRT.html" style="color: black;">
+      <div class="kedua">
+        <p class="judul">Apa Fungsi Transportasi Umum?</p>
+        <div class="kotak">
           <div>
-            <i data-feather="command"></i>
-            <p>Mass Rapid Transit (MRT)</p>
+            <i class="fa-solid fa-dollar-sign"></i>
+            <p>Menghemat uang</p>
           </div>
-        </a>
-        <a href="Pengertian Bus Listrik.html" style="color: black;">
           <div>
-            <i data-feather="lock"></i>
-            <p>Bus Listrik</p>
+            <i class="fa-solid fa-seedling"></i>
+            <p>Ramah untuk lingkungan</p>
           </div>
-        </a>
-        <a href="Pengertian MRT.html" style="color: black;">
           <div>
-            <i data-feather="wind"></i>
-            <p>Tokyo No Kaba</p>
+            <i class="fa-solid fa-person"></i>
+            <p>Dapat bersosialisasi dengan orang lain</p>
           </div>
-        </a>
+          <div>
+            <i class="fa-solid fa-shield-halved"></i>
+            <p>Keamanan dan kenyamanan yang lebih baik</p>
+          </div>
+          <div>
+            <i class="fa-solid fa-city"></i>
+            <p>Dapat menghindari kemacatan</p>
+          </div>
+          <div>
+            <i class="fa-solid fa-fan"></i>
+            <p>Hemat Tenaga</p>
+          </div>
+          <div>
+            <i class="fa-solid fa-person"></i>
+            <p>Meningkatkan aktivitas tubuh</p>
+          </div>
+          <div>
+            <i class="fa-solid fa-square-parking"></i>
+            <p>Tidak repot mencari parkir</p>
+          </div>
+          <div>
+            <i class="fa-solid fa-square-parking"></i>
+            <p>Lebih leluasa menikmati pemandangan</p>
+          </div>
+          <div>
+            <i class="fa-solid fa-person-running"></i>
+            <p>Fleksibilitas yang baik</p>
+          </div>
+        </div>
+      </div>
+      <div class="kedua">
+        <p class="judul">Apa saja contoh transportasi umum yang canggih?</p>
+        <p class="penghantar">
+          Hadirnya layanan transportasi umum yang efisien dan merata menjadi
+          kunci utama dari pergerakan orang-orang di perkotaan yang serba cepat.
+          Transportasi umum juga dapat membuat pusat kota tetap ramai dan mampu
+          mengurangi kemacetan,
+          <span
+            >kalian bisa klik kotak yang di bawah ini untuk penjelasan yang
+            lebih detail pada transportasi tersebut</span
+          >. Berikut ini adalah contoh contohnya :
+        </p>
+        <div class="kotak">
+          <a href="Pengertian MRT.html" style="color: black">
+            <div>
+              <i class="fa-solid fa-train"></i>
+              <p>Mass Rapid Transit (MRT)</p>
+            </div>
+          </a>
+          <a href="Pengertian Bus Listrik.html" style="color: black">
+            <div>
+              <i class="fa-solid fa-bus-simple"></i>
+              <p>Bus Listrik</p>
+            </div>
+          </a>
+          <a href="Pengertian Tokyo No Kaba.html" style="color: black">
+            <div>
+              <i class="fa-solid fa-ferry"></i>
+              <p>Tokyo No Kaba</p>
+            </div>
+          </a>
+        </div>
+      </div>
+      <p class="judul">
+        Apa saja solusi transportasi pada <span>Smart City? </span>
+      </p>
+
+      <div class="ketiga">
+        <div>
+          <h1>1. Sistem Transportasi Terpadu Berbasis AI</h1>
+          <p>
+            Menggunakan kecerdasan buatan (AI) untuk mengelola dan
+            mengoptimalkan lalu lintas kota. Sistem ini dapat memprediksi pola
+            lalu lintas, mengurangi kemacetan, dan memberikan rekomendasi rute
+            terbaik secara real-time.
+          </p>
+
+          <h1>2. Penggunaan Kendaraan Otonom</h1>
+          <p>
+            Mengintegrasikan kendaraan otonom untuk transportasi umum dan
+            layanan taksi. Ini dapat mengurangi kecelakaan lalu lintas dan
+            meningkatkan efisiensi transportasi.
+          </p>
+
+          <h1>3. Sistem Pengisian Daya Listrik Otomatis</h1>
+          <p>
+            Mengembangkan jaringan stasiun pengisian daya listrik otomatis untuk
+            kendaraan listrik yang tersebar di seluruh kota. Ini dapat
+            mengurangi ketergantungan pada bahan bakar fosil dan mendukung
+            transportasi berkelanjutan.
+          </p>
+
+          <h1>4. Sistem Parkir Cerdas</h1>
+          <p>
+            Menggunakan sensor dan aplikasi mobile untuk membantu pengendara
+            menemukan tempat parkir yang tersedia secara real-time. Ini dapat
+            mengurangi waktu yang dihabiskan untuk mencari parkir dan mengurangi
+            polusi udara.
+          </p>
+          <h1>5. Penerapan Sistem Pembayaran Transportasi Digital Terpadu</h1>
+          <p>
+            Mengembangkan sistem pembayaran digital yang memungkinkan pengguna
+            membayar berbagai transportasi dengan satu aplikasi atau kartu,
+            sehingga memudahkan penggunaan transportasi umum.
+          </p>
+        </div>
       </div>
     </div>
-    <p class="judul">
-      Apa saja solusi transportasi pada <span>Smart City? </span>
-    </p>
-
-    <div class="ketiga">
-      <div>
-        <h1>1. Sistem Transportasi Terpadu Berbasis AI</h1>
-        <p>
-          Menggunakan kecerdasan buatan (AI) untuk mengelola dan
-          mengoptimalkan lalu lintas kota. Sistem ini dapat memprediksi pola
-          lalu lintas, mengurangi kemacetan, dan memberikan rekomendasi rute
-          terbaik secara real-time.
-        </p>
-
-        <h1>2. Penggunaan Kendaraan Otonom</h1>
-        <p>
-          Mengintegrasikan kendaraan otonom untuk transportasi umum dan
-          layanan taksi. Ini dapat mengurangi kecelakaan lalu lintas dan
-          meningkatkan efisiensi transportasi.
-        </p>
-
-        <h1>3. Sistem Pengisian Daya Listrik Otomatis</h1>
-        <p>
-          Mengembangkan jaringan stasiun pengisian daya listrik otomatis untuk
-          kendaraan listrik yang tersebar di seluruh kota. Ini dapat
-          mengurangi ketergantungan pada bahan bakar fosil dan mendukung
-          transportasi berkelanjutan.
-        </p>
-
-        <h1>4. Sistem Parkir Cerdas</h1>
-        <p>
-          Menggunakan sensor dan aplikasi mobile untuk membantu pengendara
-          menemukan tempat parkir yang tersedia secara real-time. Ini dapat
-          mengurangi waktu yang dihabiskan untuk mencari parkir dan mengurangi
-          polusi udara.
-        </p>
-        <h1>5. Penerapan Sistem Pembayaran Transportasi Digital Terpadu</h1>
-        <p>
-          Mengembangkan sistem pembayaran digital yang memungkinkan pengguna
-          membayar berbagai transportasi dengan satu aplikasi atau kartu,
-          sehingga memudahkan penggunaan transportasi umum.
-        </p>
-      </div>
-    </div>
-  </div>
-  <script>
-    feather.replace();
-  </script>
-</body>
-
+    <script>
+      feather.replace();
+    </script>
+  </body>
 </html>
