--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/1897315b86.js"
+      crossorigin="anonymous"
+    ></script>
+
     <script src="https://unpkg.com/feather-icons"></script>
   </head>
   <body>
     <!-- Navbar -->
-     hi
-    <nav class="navbar">
+    hi
+    <nav class="navbar" id="navbar">
       <div class="navbar-logo">
         <p>Smart<span>City</span></p>
       </div>
@@ -33,10 +37,7 @@
     <div class="isi">
       <p class="judul">Apa itu <span>Smart City?</span></p>
       <div class="awal">
-        <img
-          src="image/smartcity.jpg"
-          alt="Gambar Smart City"
-        />
+        <img src="image/smartcity.jpg" alt="Gambar Smart City" />
         <div>
           <p>
             <span>Kota Cerdas adalah</span>
@@ -171,14 +172,18 @@
             ekonomi kota. Smart City 1.0 dicirikan oleh penyedia teknologi yang
             mendorong teknologi sebagai solusi yang tepat dalam pengelolaan kota
             dan menekankan bahwa teknologi dapat mempengaruhi kualitas hidup
-            warga. <span>Smart City 1.0</span> juga merupakan filosofi yang mendasari di
-            balik sebagian besar proyek-proyek smart city yang dibangun terlebih
-            dahulu di <span> Portugal hingga di Songdo, Korea Selatan dari perusahaan
-            Living PlanIT dan Cisco </span>. Dalam bukunya, Smart Cities,<span> Anthony
-            Townsend memberikan kritik yang cerdas terhadap Smart City 1.0
-            dengan alasan bahwa visi urban futuristik yang didorong oleh
-            teknologi akan kehilangan bagian penting dari bagaimana kota
-            berinteraksi dengan warganya.</span>
+            warga. <span>Smart City 1.0</span> juga merupakan filosofi yang
+            mendasari di balik sebagian besar proyek-proyek smart city yang
+            dibangun terlebih dahulu di
+            <span>
+              Portugal hingga di Songdo, Korea Selatan dari perusahaan Living
+              PlanIT dan Cisco </span
+            >. Dalam bukunya, Smart Cities,<span>
+              Anthony Townsend memberikan kritik yang cerdas terhadap Smart City
+              1.0 dengan alasan bahwa visi urban futuristik yang didorong oleh
+              teknologi akan kehilangan bagian penting dari bagaimana kota
+              berinteraksi dengan warganya.</span
+            >
           </p>
           <h1>B. Smart City 2.0: Technology Enabled, City-Led</h1>
           <p>
@@ -188,19 +193,26 @@
             dalam menerapkan teknologi cerdas dan inovasi-inovasi yang
             cemerlang. Mereka akan fokus untuk menemukan solusi agar teknologi
             dapat menjadi sarana utama untuk meningkatkan kualitas hidup warga.
-            <span>Salah satu contoh dari Smart City 2.0 adalah</span> ketika <span>Walikota Rio </span>
-            pergi ke kantor IBM untuk <span> ahli yang dapat membuat teknologi
-            sensor jaringan untuk mengurangi bencana tanah longsor di lereng
-            bukit Favelas</span>.Proyek ini kemudian menjadi perhatian dunia, terutama
-            pada abad ke-21 ini setelah teknologi-teknologi terus berkembang dan
-            mulai digunakan untuk mendeteksi dan mencegah tindak kejahatan dan
-            untuk administrasi layanan darurat yang terintegrasi dalam smart
-            services. Sebagian besar kota-kota terkemuka di dunia yang
-            menerapkan konsep smart city, <span>misalnya Barcelona</span>,<span>telah memiliki
-            lebih dari 20 wilayah dengan program smart city</span>, <span>ratusan ruang
-            publik</span> telah <span>tersambung</span> dengan <span>jaringan wi-fi</span>, <span>angkutan umum </span>dengan
-            smart lighting (automatic on-off, energy usage detection, CCTV
-            monitor), <span>serta promosi infrastruktur pengisian kendaraan listrik.</span>
+            <span>Salah satu contoh dari Smart City 2.0 adalah</span> ketika
+            <span>Walikota Rio </span> pergi ke kantor IBM untuk
+            <span>
+              ahli yang dapat membuat teknologi sensor jaringan untuk mengurangi
+              bencana tanah longsor di lereng bukit Favelas</span
+            >.Proyek ini kemudian menjadi perhatian dunia, terutama pada abad
+            ke-21 ini setelah teknologi-teknologi terus berkembang dan mulai
+            digunakan untuk mendeteksi dan mencegah tindak kejahatan dan untuk
+            administrasi layanan darurat yang terintegrasi dalam smart services.
+            Sebagian besar kota-kota terkemuka di dunia yang menerapkan konsep
+            smart city, <span>misalnya Barcelona</span>,<span
+              >telah memiliki lebih dari 20 wilayah dengan program smart
+              city</span
+            >, <span>ratusan ruang publik</span> telah
+            <span>tersambung</span> dengan <span>jaringan wi-fi</span>,
+            <span>angkutan umum </span>dengan smart lighting (automatic on-off,
+            energy usage detection, CCTV monitor),
+            <span
+              >serta promosi infrastruktur pengisian kendaraan listrik.</span
+            >
             Walikota Barcelona telah berusaha untuk memimpin dengan inovasi
             global dengan tidak hanya memulai banyak proyek, tetapi juga
             mendukung pertumbuhan industri smart city dan city network melalui
