--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="index.html">Pengertian</a>
         <a href="Transprortasi.html">Transprotasi</a>
         <i data-feather="moon" id="modegelap" onclick="klikmodegelap()"></i>
-        <i data-feather="sun"></i>
+        <i data-feather="sun" onclick="klikmodeterang()"></i>
       </div>
       <i data-feather="menu" id="menu"></i>
     </nav>
