--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
       </div>
       <i data-feather="menu" id="menu"></i>
     </nav>
+    <nav class="dropdown" id="dropdown">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis, quo accusamus. Nihil quos fugiat placeat eos soluta mollitia ea fuga, magnam possimus amet cupiditate cumque sit eligendi illum eaque a!</nav>
+
     <!-- Isi -->
     <div class="isi">
       <p class="judul">Apa itu <span>Smart City?</span></p>
