--- a/Pengertian Tokyo No Kaba.html
+++ b/Pengertian Tokyo No Kaba.html
@@ -12,6 +12,11 @@
       rel="stylesheet"
     />
     <script src="https://unpkg.com/feather-icons"></script>
+    <script
+      src="https://kit.fontawesome.com/1897315b86.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="shortcut icon" href="image/favicon-16x16.png" type="image/x-icon">
   </head>
   <body>
     <!-- Navbar -->
@@ -92,11 +97,22 @@
       </div>
     </div>
     <footer>
-      <div class="footeratas" id="footeratas">  
-        <a href="https://www.instagram.com/cokvrindaaa88/" id="logoig" class="logoig"><i class="fa-brands fa-instagram" ></i></a>
-        <a href="https://www.tiktok.com/@cokvrindaa"><i class="fa-brands fa-tiktok" id="logotiktok"></i></a>
-        <a href="https://www.youtube.com/@ohtheneptune"><i class="fa-brands fa-youtube" id="logoyt"></i></a>
-        <a href="https://github.com/cokvrindaa"><i class="fa-brands fa-github" id="logogithub"></i></a>
+      <div class="footeratas" id="footeratas">
+        <a
+          href="https://www.instagram.com/cokvrindaaa88/"
+          id="logoig"
+          class="logoig"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
+        <a href="https://www.tiktok.com/@cokvrindaa"
+          ><i class="fa-brands fa-tiktok" id="logotiktok"></i
+        ></a>
+        <a href="https://www.youtube.com/@ohtheneptune"
+          ><i class="fa-brands fa-youtube" id="logoyt"></i
+        ></a>
+        <a href="https://github.com/cokvrindaa"
+          ><i class="fa-brands fa-github" id="logogithub"></i
+        ></a>
       </div>
       <p>By Cok Vrinda 2024</p>
     </footer>
