--- a/Pengertian Bus Listrik.html
+++ b/Pengertian Bus Listrik.html
@@ -7,16 +7,17 @@
     <link rel="stylesheet" href="transprotasistyle.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    
+
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
     <script src="https://unpkg.com/feather-icons"></script>
     <script
-    src="https://kit.fontawesome.com/1897315b86.js"
-    crossorigin="anonymous"
-  ></script>
+      src="https://kit.fontawesome.com/1897315b86.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="shortcut icon" href="image/favicon-16x16.png" type="image/x-icon">
   </head>
   <body>
     <!-- Navbar -->
@@ -47,7 +48,7 @@
       <p class="judul">Apa itu Bus Listrik?</p>
       <div class="awal">
         <div>
-          <img src="/image/Autobuses_eléctricos_BYD_en_Bogotá.jpg" alt="" />
+          <img src="/image/busbiasa.jpg" alt="" />
           <p class="penjelasan">
             Singkatnya, Bus listrik adalah bus yang di tenagai oleh listrik,
             sehingga lebih ramah lingkungan.
@@ -97,9 +98,9 @@
       <p class="judul">Apa Perbedaan Bus Listrik dan Bus Biasa?</p>
       <div class="kelima">
         <div class="versus">
-          <img src="image/bus-listrik-tmp-bandung_169.jpeg" alt="" />
+          <img src="image/buslistrik.jpeg" alt="" />
           <p>V<span>S</span></p>
-          <img src="image/Autobuses_eléctricos_BYD_en_Bogotá.jpg" alt="" />
+          <img src="image/busbiasa.jpg" alt="" />
         </div>
         <div>
           <h1>1. Kebisingan</h1>
@@ -150,9 +151,9 @@
       </div>
       <p>By Cok Vrinda 2024</p>
     </footer>
-    <script src="index.js"></script>
     <script>
       feather.replace();
     </script>
+    <script src="index.js"></script>
   </body>
 </html>
