--- a/Pengertian MRT.html
+++ b/Pengertian MRT.html
@@ -16,6 +16,7 @@
       src="https://kit.fontawesome.com/1897315b86.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="shortcut icon" href="image/favicon-16x16.png" type="image/x-icon">
   </head>
 
   <body>
@@ -183,7 +184,6 @@
       </div>
       <p>By Cok Vrinda 2024</p>
     </footer>
-    <script src="index.js"></script>
     <script>
       feather.replace();
     </script>
