--- a/Transprortasi.html
+++ b/Transprortasi.html
@@ -16,6 +16,7 @@
       src="https://kit.fontawesome.com/1897315b86.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="shortcut icon" href="image/favicon-16x16.png" type="image/x-icon">
   </head>
 
   <body>
@@ -48,7 +49,7 @@
       <p class="judul">Solusi Transportasi pada <span>Smart City</span></p>
       <div class="awal">
         <div>
-          <img src="/image/bus-listrik-tmp-bandung_169.jpeg" alt="" />
+          <img src="/image/buslistrik.jpeg" alt="" />
           <p>
             Untuk membangun smart city yang maju dan modern diperlukan 3 solusi
             utama yang inovatif, Seperti solusi untuk Transportasi, Solusi untuk
