--- a/Pengertian Bus Listrik.html
+++ b/Pengertian Bus Listrik.html
@@ -98,9 +98,9 @@
       <p class="judul">Apa Perbedaan Bus Listrik dan Bus Biasa?</p>
       <div class="kelima">
         <div class="versus">
-          <img src=".image/buslistrik.jpeg" alt="" />
+          <img src="./image/buslistrik.jpeg" alt="" />
           <p>V<span>S</span></p>
-          <img src=".image/busbiasa.jpg" alt="" />
+          <img src="./image/busbiasa.jpg" alt="" />
         </div>
         <div>
           <h1>1. Kebisingan</h1>
